[package]

name = "rustfmt-nightly"
version = "1.6.0"
description = "Tool to find and fix Rust formatting issues"
repository = "https://github.com/rust-lang/rustfmt"
readme = "README.md"
license = "Apache-2.0 OR MIT"
build = "build.rs"
categories = ["development-tools"]
edition = "2021"

[[bin]]
name = "rustfmt"
path = "src/bin/main.rs"

[[bin]]
name = "cargo-fmt"
path = "src/cargo-fmt/main.rs"

[[bin]]
name = "rustfmt-format-diff"
path = "src/format-diff/main.rs"

[[bin]]
name = "git-rustfmt"
path = "src/git-rustfmt/main.rs"

[features]
default = ["cargo-fmt", "rustfmt-format-diff"]
cargo-fmt = []
rustfmt-format-diff = []
generic-simd = ["bytecount/generic-simd"]

[dependencies]
annotate-snippets = { version = "0.9", features = ["color"] }
anyhow = "1.0"
bytecount = "0.6.4"
cargo_metadata = "0.15.4"
clap = { version = "4.4.2", features = ["derive"] }
clap-cargo = "0.12.0"
diff = "0.1"
dirs = "4.0"
getopts = "0.2"
ignore = "0.4"
itertools = "0.10"
lazy_static = "1.4"
regex = "1.7"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
term = "0.7"
thiserror = "1.0.40"
toml = "0.7.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
unicode-segmentation = "1.9"
unicode-width = "0.1"
unicode-properties = { version = "0.1", default-features = false, features = ["general-category"] }

rustfmt-config_proc_macro = { version = "0.3", path = "config_proc_macro" }

# Rustc dependencies don't exist for wasm32-unknown-unknown so we vendor them
rustc_ast = { path = "./rustc_crates/rustc_ast" }
rustc_ast_pretty = { path = "./rustc_crates/rustc_ast_pretty" }
rustc_data_structures = { path = "./rustc_crates/rustc_data_structures" }
rustc_errors = { path = "./rustc_crates/rustc_errors" }
rustc_expand = { path = "./rustc_crates/rustc_expand" }
rustc_parse = { path = "./rustc_crates/rustc_parse" }
rustc_session = { path = "./rustc_crates/rustc_session" }
rustc_span = { path = "./rustc_crates/rustc_span" }
rustc_index = { path = "./rustc_crates/rustc_index" }
rustc_lexer = { path = "./rustc_crates/rustc_lexer" }
rustc_macros = { path = "./rustc_crates/rustc_macros" }
rustc_serialize = { path = "./rustc_crates/rustc_serialize" }
rustc_type_ir = { path = "./rustc_crates/rustc_type_ir" }
rustc_arena = { path = "./rustc_crates/rustc_arena" }
rustc_graphviz = { path = "./rustc_crates/rustc_graphviz" }
rustc_error_messages = { path = "./rustc_crates/rustc_error_messages" }
rustc_baked_icu_data = { path = "./rustc_crates/rustc_baked_icu_data" }
rustc_fluent_macro = { path = "./rustc_crates/rustc_fluent_macro" }
rustc_hir = { path = "./rustc_crates/rustc_hir" }
rustc_lint_defs = { path = "./rustc_crates/rustc_lint_defs" }
rustc_target = { path = "./rustc_crates/rustc_target" }
rustc_ast_passes = { path = "./rustc_crates/rustc_ast_passes" }
rustc_attr = { path = "./rustc_crates/rustc_attr" }
rustc_feature = { path = "./rustc_crates/rustc_feature" }
rustc_fs_util = { path = "./rustc_crates/rustc_fs_util" }
rustc_abi = { path = "./rustc_crates/rustc_abi" }

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true
